--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,21 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@500&family=Dancing+Script:wght@700&family=Fredoka&family=Lato:ital@0;1&family=Montserrat:ital,wght@1,300&family=Mulish&family=Nunito+Sans:ital,wght@1,300&family=Open+Sans:ital,wght@0,400;1,300;1,400&family=Oswald&family=Permanent+Marker&family=Press+Start+2P&family=Roboto+Flex:opsz,wght@8..144,200&family=Roboto+Slab&family=Roboto:ital@0;1&family=Tapestry&family=Urbanist:ital,wght@0,300;0,500;1,300;1,500&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  width: 100vw;
+  background-color:black;
+  color:white;
+  font-family: "Urbanist", sans-serif;
+  margin:0 1rem;
+  overflow-x: hidden;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+::-webkit-scrollbar {
+  width: 7px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+::-webkit-scrollbar-thumb {
+  /* background:goldenrod; */
+  border-radius:10px;
+}  
